<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/layout_padding"
    android:paddingEnd="@dimen/layout_padding"
    tools:context=".activities.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/account_logo"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/account_items_margin_bottom"
            android:adjustViewBounds="true"
            android:src="@drawable/account_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/account_items_margin_bottom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/account_items_margin_bottom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/account_register_login_btn"
            style="@style/account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/account_items_margin_bottom"
            android:text="@string/account_login_btn"
            android:textSize="20sp"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/account_register_register_btn"
            style="@style/account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/account_items_margin_bottom"
            android:text="@string/account_register_btn"
            android:textSize="20sp"
            app:cornerRadius="5dp" />

    </LinearLayout>


</LinearLayout>