<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.post.AddPostActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/layout_padding"
        android:paddingEnd="@dimen/layout_padding"
        tools:context=".fragments.post.AddPostFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/account_items_margin_bottom"
            android:adjustViewBounds="true"
            android:src="@drawable/default_image_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/account_items_margin_bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTakePhoto"
                style="@style/account_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/account_items_margin_bottom"
                android:text="@string/addpost_take_photo_btn"
                android:textSize="20sp"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/btnNext"
                style="@style/account_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/account_items_margin_bottom"
                android:text="@string/generic_next"
                android:textSize="20sp"
                app:cornerRadius="5dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCancel"
            style="@style/account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generic_btn_cancel"
            android:backgroundTint="@color/grey"
            android:textSize="20sp"
            app:cornerRadius="5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>