<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.post.PostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/trackItem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:columnCount="2"
            android:orientation="horizontal"
            android:padding="4dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="3"
                android:paddingRight="12dp">

                <ImageView
                    android:id="@+id/trackImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="7"
                android:background="@drawable/playlist_item_border"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/trackTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/trackSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/grey" />
            </LinearLayout>
        </GridLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/account_items_margin_bottom"
            android:hint="@string/addpost_comment">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/txtComment"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:lines="5"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgPublish"
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_logo"
            android:layout_margin="@dimen/account_items_margin_bottom"
            android:adjustViewBounds="true"
            android:src="@drawable/default_image_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnTakePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addpost_take_photo_btn"
                android:textSize="20sp"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

            <Button
                android:id="@+id/btnChooseFromAlbum"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/account_items_margin_bottom"
                android:text="@string/addpost_choose_album_btn"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnPublish"
            style="@style/account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/account_items_margin_bottom"
            android:text="@string/addpost_publish"
            android:textSize="20sp"
            app:cornerRadius="5dp" />

    </LinearLayout>

</FrameLayout>