<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/layout_padding"
    android:paddingEnd="@dimen/layout_padding"
    tools:context=".fragments.player.PlayerFragment">

    <include
        android:id="@+id/player_top_navbar"
        layout="@layout/player_navbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/player_music_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/player_image_margin_bottom"
                android:adjustViewBounds="true"
                android:src="@drawable/placeholder" />

            <TextView
                android:id="@+id/player_music_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/player_music_title_margin_bottom"
                android:autoSizeTextType="uniform"
                android:text="@string/player_music_title"
                android:textSize="@dimen/player_music_title_font_size" />

            <TextView
                android:id="@+id/player_artist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/player_music_title_margin_bottom"
                android:text="@string/player_artist_name" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/player_seekbar_margin_bottom">

                <SeekBar
                    android:id="@+id/player_music_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:progressBackgroundTint="@color/primary"
                    android:progressTint="@color/primary"
                    android:thumbTint="@color/primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/player_current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_current_time_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/player_music_seekbar" />

                <TextView
                    android:id="@+id/player_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_current_time_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/player_music_seekbar" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:columnCount="5"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="start|center">

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/player_loop_btn"
                        android:backgroundTint="@color/primary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center">

                    <ImageButton
                        android:id="@+id/player_prev_btn"
                        android:layout_width="15dp"
                        android:layout_height="25dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/player_prev_btn"
                        android:backgroundTint="@color/primary"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center">

                    <ImageButton
                        android:id="@+id/player_play_btn"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/player_pause_btn"
                        android:backgroundTint="@color/primary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center">

                    <ImageButton
                        android:id="@+id/player_next_btn"
                        android:layout_width="15dp"
                        android:layout_height="25dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/player_next_btn"
                        android:backgroundTint="@color/primary"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="end|center">

                    <ImageButton
                        android:id="@+id/player_list_btn"
                        android:layout_width="25dp"
                        android:layout_height="22dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/player_list_btn"
                        android:backgroundTint="@color/primary" />
                </LinearLayout>
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>